# speculate.rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
benches/: basic.rs
examples/: basic.rs
src/: block.rs  generator.rs  lib.rs  parser.rs
tests/: basic.rs  example.rs  parametrized.rs
