[package]
name = "speculate"
version = "0.1.3"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>", "Grégoire Geis <git@gregoirege.is>"]
description = "An RSpec inspired minimal testing framework for Rust."
repository = "https://github.com/utkarshkukreti/speculate.rs"
readme = "README.md"
license = "MIT"
edition = "2018"
categories = ["development-tools::testing"]
keywords = ["rspec", "test", "testing", ]

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "^1.0"
quote = "^1.0"
unicode-ident = "^1.0"

[lib]
proc-macro = true

[features]
default = []
nightly = []
